--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,6 +15,7 @@
                             <a th:href="@{/messages}" style="margin:5px;" class="nav-link text-primary">메시지</a>
                             <a th:href="@{/config}" style="margin:5px;" class="nav-link text-primary">환경설정</a>
                             <a th:href="@{/preauth(username='user')}" style="margin:5px;" class="nav-link text-primary">메소드인증</a>
+                            <a th:href="@{/methodSecured}" style="margin:5px;" class="nav-link text-primary">메소드보안</a>
                         </div>
                     </li>
                 </ul>
